move to drafts again

--- a/_config.yml
+++ b/_config.yml
@@ -206,6 +206,7 @@ kramdown:
 # Includes & excludes
 include: ["_pages"]
 exclude:
+  - _pages/drafts
   - bin
   - CONTRIBUTING.md
   - CUSTOMIZE.md
